syntax = "proto3";
package pb;
option go_package = "github.com/go-leo/cqrs/example/api/demo;demo";

import "google/protobuf/empty.proto";
import "google/api/annotations.proto";

service DemoService {

  // CreateUser sync create user
  rpc CreateUser (CreateUserRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post : "/v1/user"
      body : "*"
    };
  }

  // UpdateUser sync update user
  rpc UpdateUser (UpdateUserRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post : "/v1/user/{user_id}"
      body : "*"
    };
  }

  // GetUser sync get user
  rpc GetUser (GetUserRequest) returns (GetUserResponse) {
    option (google.api.http) = {
      get : "/v1/user/{user_id}"
    };
  }

  // GetUsers sync get users
  rpc GetUsers (GetUsersRequest) returns (GetUsersResponse) {
    option (google.api.http) = {
      get : "/v1/users"
    };
  }

  // DeleteUser sync delete user
  rpc DeleteUser (DeleteUsersRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete : "/v1/user/{user_id}"
    };
  }

}

message CreateUserRequest {
  string name = 1;
  int32 age = 2;
  double salary = 3;
  string Token = 4;
}

message UpdateUserRequest {
  uint64 user_id = 1;
  string name = 2;
  int32 age = 3;
  double salary = 4;
  string Token = 5;
}

message GetUserRequest {
  uint64 user_id = 1;
}

message GetUserResponse {
  uint64 user_id = 1;
  string name = 2;
  int32 age = 3;
  double salary = 4;
  string Token = 5;
}

message GetUsersRequest {
  int32 page_no = 1;
  int32 page_size = 2;
}

message GetUsersResponse {
  message User {
    uint64 user_id = 1;
    string name = 2;
    int32 age = 3;
    double salary = 4;
    string Token = 5;
  }
  repeated User users = 1;
}

message DeleteUsersRequest {
  uint64 user_id = 1;
}
